# courseware

./: .gitignore  README.md
banjo_documentation/: README.rst  pyproject.toml
banjo_documentation/docs/: conf.py  example.rst  index.rst  models.rst  views.rst
banjo_documentation/docs/_build/doctrees/: environment.pickle  example.doctree  index.doctree  models.doctree  setup.doctree  views.doctree
banjo_documentation/docs/_build/html/: .buildinfo  example.html  genindex.html  index.html  models.html  objects.inv  search.html  searchindex.js  setup.html  views.html
banjo_documentation/docs/_build/html/_sources/: example.rst.txt
cs9_student_setup/: README.md  gpio_setup.sh  setup_jupyter.sh  setup_script.sh  setup_script_windows.sh  setupcs10_script.sh
local_repo_management/: get_repos.sh  git_url_from_commit_urls.csv
make_schedule/: class_planner.py  input.csv  pyproject.toml
personal_data_pull/: pyproject.toml
personal_data_pull/whatsapp_export/: export_whatsapp.py  requirements.txt  whatsapp_df.py
personal_data_pull/youtube_export/: README.md  modify_db.py  youtube.db  youtube_export.py
turtlegifmaker/: README.md  gifmaker.py  gifmaker.sh  requirements.txt  tasks.py
