[tool.poetry]
name = "personal-data-pull"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "personal_data_pull"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.22.0"
pandas = "1.3.5"
python-dateutil = "2.8.2"
pytz = "2021.3"
PyYAML = "6.0"
simple-term-menu = "1.4.1"
six = "1.16.0"
textparser = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
